gramdictru/wwwroot/css/site.css
body {
    font-family: serif;
    line-height: 140%;
    text-align: center;
    background-image: url(../background.jpeg);
}

.page {
    text-align: center;
    max-width: 75em;
    display: inline-block;
    background-image: url(../page.jpg);
}

.body-content {
    color: #2d0016;
    padding-top: 25px;
    padding-left: 5px;
    padding-right: 5px;
    max-width: 50em;
    text-align: justify;
    display: inline-block;
    overflow-x: visible;
}

a {
    color: #303e00;
    text-decoration: none;
}

a:visited {
    color: #858e4e;
}

a:hover {
    text-decoration: underline;
}

@media (max-width: 500px) {
    img#cover {
        display: block;
        margin: 0 auto;
        padding-bottom: 1em;
    }
}

@media (min-width: 501px) {
    img#cover {
        float: left;
        margin-right: 1.5em;
        margin-bottom: 2em;
    }
}

.abstract {
    line-height: 120%;
}

.nowrap {
    white-space: nowrap;
}

h1 {
    line-height: 130%;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
}

table tr td {
    text-align: center;
    text-indent: 0;
}

table tr th {
    text-align: center;
    padding: 0.5em;
}

table {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1em;
}

em {
    letter-spacing: 0.3em;
    font-style: normal;
}

p {
    text-align: justify;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    text-indent: 2em;
}

code, word-end {
    font-family: Times;
    font-style: italic;
}

word-end {
    white-space: nowrap;
}

code em {
    font-style: italic;
}

#contents-link {
    text-align: center;
    margin-top: 1em;
    margin-bottom: 2em;
}

#author {
    text-align: center;
    font-weight: bold;
    font-size: 140%;
    padding-top: 3em;
    font-style: italic;
}

hr {
    width: 10%;
    margin-top: 1em;
    margin-bottom: 1em;
}

h1 {
    -webkit-margin-before: 0.3em;
}

.boxed-cross:before
{
    content: "⌧"
}
.cross:before
{
    content: "✕"
}

table tr td {
    padding-left: 0.25em;
    padding-right: 0.25em;
}

table.left-aligned tr td {
    text-align: left;
    vertical-align: top;
}

table.left-aligned {
    margin-left: 2em;
    margin-top: 0.4em;
    margin-bottom: 0.4em;
}

table.left-aligned tr td:nth-child(1) {
    padding-left: 0;
    font-weight: bold;
    min-width: 6em;
}

table.left-aligned tr td:nth-last-child(1) {
    padding-right: 0;
}

.letter {
    font-weight: bold;
}

.signature {
    text-align: right;
    margin-right: 20%;
    margin-top: 2em;
    margin-bottom: 2em;
    font-style: italic;
}

ul#contents {
    text-align: left;
}

@media (max-width: 500px) {
    ul#contents {
        padding-left: 1.2em;
    }

    ul#contents ul {
        padding-left: 1.2em;
    }
}

.footnote {
    font-size: smaller;
}

.entry {
    margin-left: 4em;
    text-indent: 0;
}

.h1 { font-size: 24px;}
.h2 { font-size: 22px;}
.h3 { font-size: 18px;}
.h4 { font-size: 16px;}
.h5 { font-size: 12px;}
.h6 { font-size: 10px;}

